--- a/package.json
+++ b/package.json
@@ -4,17 +4,19 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@types/stats.js": "^0.17.0",
     "typescript": "^4.6.4",
     "vite": "^3.1.0",
     "vite-plugin-glsl": "^0.5.1"
   },
   "dependencies": {
     "@types/three": "^0.144.0",
+    "stats.js": "^0.17.0",
     "three": "^0.145.0"
   }
 }
