--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
   },
   "devDependencies": {
     "@types/stats.js": "^0.17.0",
+    "@typescript-eslint/parser": "^5.42.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "prettier": "^2.7.1",
     "typescript": "^4.6.4",
     "vite": "^3.1.0",
+    "vite-plugin-eslint": "^1.8.1",
     "vite-plugin-glsl": "^0.5.1"
   },
   "dependencies": {
